--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,14 @@
   <body>
     <% unless controller_name == "pages" %>
       <nav>
-        <%= link_to 'Home', products_url %> |
-
-        <%= link_to 'New Product', new_product_url %>
+        <%= link_to 'Home', products_url %> | <%= link_to 'New Product', new_product_url %> |
+        <span class="userinfo">
+          <% if current_user %>
+            Signed in as <%= current_user.email %> | <%= link_to 'Log Out', session_path("current"), :method => :delete %>
+          <% else %>
+            <%= link_to 'Login', new_session_path %> or <%= link_to 'Register', new_user_path %>
+          <% end %>
+        </span>
       </nav>
     <% end %>
 
