--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit <%= @product.name %></h1>
-<%= link_to 'Back to All Products', products_url %> | <%= link_to 'Back to Product', product_path(@product) %>
+<%= link_to 'Back to All Products', products_path %> | <%= link_to 'Back to Product', product_path(@product) %>
 
 <%= render 'errormsg', product: @product %>
 
