Changed some links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
         <%= link_to 'Home', products_path %> | <%= link_to 'New Product', new_product_url %> |
         <span class="userinfo">
           <% if current_user %>
-            Signed in as <%= current_user.email %> | <%= link_to 'Log Out', session_path("current"), :method => :delete %>
+            Signed in as <%= current_user.email %> | <%= link_to 'Log Out', sessions_path("current"), :method => :delete %>
           <% else %>
-            <%= link_to 'Login', new_session_path %> or <%= link_to 'Register', new_user_path %>
+            <%= link_to 'Login', new_sessions_path %> or <%= link_to 'Register', new_users_path %>
           <% end %>
         </span>
       </nav>
