--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 <h4>Description: <%= @product.description %></h4>
 <h5>Price in dollas: <%= @product.price_in_dollars %></h5>
 
-<%= render 'reviews', product: @product%>
+<%= render 'products/reviews', product: @product%>
 
 <h4>New Review</h4>
 
