--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit Review</h1>
-<%= link_to("Delete", product_review_path(@product, @review), method: :delete, data: {confirm: "Are you sure you want to delete this product?"})  %>
+<%= link_to("Delete", product_review_path(@product, @review), method: :delete, data: {confirm: "Are you sure you want to delete this review?"})  %>
 <%= render 'form' %>
